--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,3 +1,7 @@
+/*
+ѴЭЯГІСДL ШДУБДЯ Ьy ГНЗСЯФФКЗDМ4И
+https://github.com/th3cr00k3dm4n
+*/
 @import url("/home/cr00k3d/.cache/wal/colors-waybar.css");
 * {
  
